# black76-rust

./: Cargo.toml  README.md  build.rs
benches/: pricing.rs
lib/: lets_be_rational.cpp
src/: common.rs  constants.rs  greeks.rs  implied_volatility.rs  inputs.rs  lib.rs  pricing.rs  rational_implied_volatility.rs
tests/: bstest.rs
